k8s/personservice.yml
apiVersion: v1
kind: Service
metadata:
   name: person
   labels:
      app: person
spec:
   type: NodePort
   ports:
   -  port: 8080
      name: http
   selector:
      app: person
