k8s/gateway-all-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: person
spec:
  host: person
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2      
---


apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
   name: person
spec:
   hosts:
   - person
   http:
   -  route:
      -  destination:
            host: person
            subset: v2
