k8s/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
   name: message-gateway
spec:
   selector:
      istio: ingressgateway # use istio default controller
   servers:
   -  port:
         number: 80
         name: http
         protocol: HTTP
      hosts:
      - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
   name: message
spec:
   hosts:
   - '*'
   gateways:
   - message-gateway
   http:
   -  match:
      -  uri:
            prefix: /message
      route:
      -  destination:
            host: message
            port:
               number: 8080
